backend/TempExecution/068739d0538b4756b3c3d97f9df5cf5a_output.txt
068739d0538b4756b3c3d97f9df5cf5a.cpp:3:2: error: invalid preprocessing directive #iniclude; did you mean #include?
    3 | using namespace std;
      |  ^~~~~~~~
      |  include
068739d0538b4756b3c3d97f9df5cf5a.cpp: In function 'int main()':
068739d0538b4756b3c3d97f9df5cf5a.cpp:15:5: error: 'cin' was not declared in this scope
068739d0538b4756b3c3d97f9df5cf5a.cpp:1:1: note: 'std::cin' is defined in header '<iostream>'; this is probably fixable by adding '#include <iostream>'
  +++ |+#include <iostream>
    1 | 
068739d0538b4756b3c3d97f9df5cf5a.cpp:17:5: error: 'cout' was not declared in this scope
068739d0538b4756b3c3d97f9df5cf5a.cpp:17:5: note: 'std::cout' is defined in header '<iostream>'; this is probably fixable by adding '#include <iostream>'
